--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "gender-reveal",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "german",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -48,8 +47,8 @@
       [
         "react-native-google-mobile-ads",
         {
-          "android_app_id": "ca-app-pub-xxxxxxxx~xxxxxxxx",
-          "ios_app_id": "ca-app-pub-xxxxxxxx~xxxxxxxx"
+          "androidAppId": "ca-app-pub-3940256099942544~3347511713",
+          "iosAppId": "ca-app-pub-3940256099942544~1458002511"
         }
       ]
     ],
